--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "next",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "export": "next export"
@@ -21,11 +21,14 @@
   },
   "homepage": "https://github.com/lh00000000/loserio-site#readme",
   "dependencies": {
-    "isomorphic-unfetch": "^3.0.0",
-    "lodash": "^4.17.15",
-    "next": "^9.3.4",
-    "pitchfinder": "^2.2.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "isomorphic-unfetch": "^4.0.2",
+    "lodash": "^4.17.21",
+    "next": "^13.5.6",
+    "pitchfinder": "^2.3.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
